@@ -182,6 +182,13 @@ JSDOC.Walker.prototype.step = function() {
 			}
 			// foo = function() {}
 			else if (this.ts.look(1).is("ASSIGN") && this.ts.look(2).is("FUNCTION")) {
+				var constructs;
+				if (doc && (constructs = doc.getTag("constructs")) && constructs.length) {
+					if (constructs[0].desc) {
+						name = constructs[0].desc;
+					}
+				}
+					
 				var isInner;
 				if (this.ts.look(-1).is("VAR") || this.isInner) {
 					if (doc && doc.getTag("memberOf").length > 0) {
@@ -204,6 +211,7 @@ JSDOC.Walker.prototype.step = function() {
 				symbol = new JSDOC.Symbol(name, params, "FUNCTION", doc);
 
 				if (isInner) symbol.isInner = true;
+				if (constructs.length) symbol.isa = "CONSTRUCTOR";
 				
 				if (this.ts.look(1).is("JSDOC")) {
 					var inlineReturn = ""+this.ts.look(1).data;
